# AgentNexus

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  _dockerignore  _gitignore  aps-integration.json  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/commands/: nexus.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
.kiro/settings/: lsp.json
_claude/commands/: gatekeeper.md  nexus.md
_github/: pull_request_template.md
_github/ISSUE_TEMPLATE/: feature_request.md
agent_net/: CLAUDE.md  __init__.py  daemon.py  identity.py  mcp_server.py  router.py  storage.py  stun.py
agent_net/adapters/: __init__.py  base.py  openclaw.py  registry.py  webhook.py
agent_net/auth/: handshake.py
agent_net/common/: __init__.py  capability_token.py  consistency_level.py  constants.py  crypto.py  did.py  governance.py  handshake.py  keystore.py  profile.py  (+3 more)
agentnexus-sdk/: README.md  pyproject.toml  skill.yaml
agentnexus-sdk/examples/: discussion_demo.py  echo_bot.py
agentnexus-sdk/src/agentnexus/: __init__.py  actions.py  client.py  discovery.py  discussion.py  emergency.py  enclave.py  exceptions.py  models.py  orchestration.py  owner.py  runs.py  secretary.py  sync.py  team.py  worker.py
agentnexus-sdk/tests/: test_actions.py  test_discussion.py  test_emergency.py  test_orchestration_sdk.py
data/: agent_net.db  blacklist.json  daemon_token.txt  mode.json  node_config.json  relay_identity.json  whitelist.json
docs/: api-reference.md  architecture.md  commands.md  cross-platform-mcp-config.md  design.md  devlog.md  did-method-spec.md  giskard-integration-checklist.md  giskard-proposal.md  mcp-setup.md  project-status.md  quickstart.md  relay-deploy.md  requirements.md  roadmap.md  scenarios.md  why.md  wip.md
scripts/: cross_verify_demo.py  demo_secretary_phase_a.py  generate_interop_fixture.py  init-cloudflare.sh  init-ssl.sh
tests/: CLAUDE.md  test_auth_matrix_v3.py  test_cases.py  test_consistency_level.py  test_did_resolution.py  test_enclave.py  test_federation.py  test_gatekeeper.py  test_governance.py  test_governance_api.py  test_handshake.py  test_keystore.py  test_mcp_bind.py  test_mcp_collaboration.py  test_online.py  test_push.py  test_relay_did_web.py  test_runtime_verifier.py  test_v05.py  test_v085_enclave.py  test_v085_rbac.py  test_v085_vault.py  test_v09_api.py  test_v09_jwt_attestation.py  test_v09_provenance.py  test_v09_reputation.py  test_v09_web_of_trust.py  test_v10_capability_token.py  test_v10_intent_route.py  test_v10_messages.py  test_v10_owner.py  test_v10_p2_security.py  test_v10_phase2_secretary.py  test_v10_sec_05_manifest.py  test_v10_sec_06_abort.py  test_v10_sec_09_message_envelope.py  test_vault_git.py
threads/: README.md
(+94 files in other folders)
