[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentnexus-sdk"
version = "0.9.5"
description = "AgentNexus Python SDK - 3 lines to connect your AI Agent to the decentralized network"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AgentNexus Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/anthropics/agentnexus"
Documentation = "https://github.com/anthropics/agentnexus#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/agentnexus"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
